# nestedutils

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  main.py  migration-v1-to-v2.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  api-reference.md  demo.md  index.md  migration-v1-to-v2.md  playground.md
nestedutils/: __init__.py  access.py  constants.py  enums.py  exceptions.py  helpers.py  introspection.py  utils.py
tests/: test_access.py  test_delete.py  test_edge_cases.py  test_exists.py  test_get.py  test_introspection.py  test_normalize_path.py  test_set.py
