[project]
name = "nestedutils"
version = "1.0.0"
description = "A utility library for accessing, setting, and deleting nested paths in Python data structures (dicts, lists, tuples)."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "ysskrishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
keywords = ["nested", "path", "access", "dictionary", "list", "utils", "utilities", "json"]
dependencies = []

[project.urls]
Homepage = "https://github.com/ysskrishna/nestedutils"
Documentation = "https://github.com/ysskrishna/nestedutils#readme"
Repository = "https://github.com/ysskrishna/nestedutils.git"
Issues = "https://github.com/ysskrishna/nestedutils/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nestedutils"]

[tool.internalurls]
author_username = "ysskrishna"
author_name = "Y. Siva Sai Krishna"
author_github = "https://github.com/ysskrishna"
author_linkedin = "https://linkedin.com/in/ysskrishna"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
