[project]
name = "nestedutils"
version = "1.1.4"
description = "The lightweight Python library for safe, simple, dot-notation access to nested dicts and lists. Effortlessly get, set, and delete values deep in your complex JSON, API responses, and config files without verbose error-checking or handling KeyError exceptions."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "ysskrishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed"
]
keywords = [
    "nested",
    "nested-data",
    "nested-dict",
    "json-access",
    "json-utils",
    "dot-notation",
    "dot-access",
    "path-access",
    "keypath",
    "deep-get",
    "deep-set",
    "deep-access",
    "deep-delete",
    "safe-access",
    "KeyError",
    "no-keyerror",
    "key-error-handling",
    "dictionary", 
    "dict",       
    "list",       
    "json",       
    "config",
    "dict-utils",
    "data-utils",
    "config-utils",
    "utilities", 
    "utils"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ysskrishna/nestedutils"
Documentation = "https://ysskrishna.github.io/nestedutils/"
Repository = "https://github.com/ysskrishna/nestedutils.git"
Issues = "https://github.com/ysskrishna/nestedutils/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nestedutils"]

[tool.pytest.ini_options]
addopts = "--maxfail=1"

[tool.internalurls]
author_username = "ysskrishna"
author_name = "Y. Siva Sai Krishna"
author_github = "https://github.com/ysskrishna"
author_linkedin = "https://linkedin.com/in/ysskrishna"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "pytest>=7.4.4",
]
